assets/canvas.css
@font-face {
  font-family: 'averia';
  src: url('./averia/AveriaSerifLibre-Regular.ttf') format('truetype');
}

@font-face {
  font-family: 'averia_bold';
  src: url('./averia/AveriaSerifLibre-Bold.ttf') format('truetype');
}

html, body, div {
  margin: 0;
  padding: 0;
  border: 0;
}

body {
  position: fixed;
  overflow-y: scroll;
  width: 100%;
  font-family: 'averia';
}

canvas {
  border: 1px solid black;
  background: black;
  opacity: .8;
  border-radius: 20px;
  margin-left: 20px;
}

.game-container {
  background-image: url("./images/bg.jpeg");
  background-size: cover;
  height: 100vh;
}

.game-inner-container {
  margin: auto;
  width: 1200px;
  height: 600px;
}

.canvas-container {
  width: 450px;
  float: left;
  margin-left: 150px;
}

.title {
  padding-top: 90px;
  padding-bottom: 50px;
  font-size: 50px;
  color: gray;
  text-align: center;
  font-weight: bold;
}

.space_bar {
  background-image: url("./images/space_bar.png");
  background-size: cover;
  height: 100px;
  width: 100px;
  margin-left: 150px;
}

.arrow_keys {
  background-image: url("./images/arrows.png");
  background-size: cover;
  height: 100px;
  width: 100px;
  margin-left: 150px;
}

.instructions_title {
  text-decoration: underline;
  font-weight: 600;
  margin-bottom: 30px;
}

.instructions_container {
  margin-top: 80px;
  display: block;
  color: gray;
  font-size: 24px;
  width: 400px;
  float: right;
  text-align: center;
  margin-right: 100px;
}

.links {
  display: flex;
  margin-top: 50px;
  justify-content: space-around;
}

.portfolio {
  background: url("./images/portfolio.png") no-repeat;
  background-position: center;
  padding: 25px;
}

.github {
  background: url("./images/github.png") no-repeat;
  background-position: center;
  padding: 25px;
}

.linkedin {
  background: url("./images/linkedin.png") no-repeat;
  background-position: center;
  padding: 25px;
}

